--- a/blogpost.html
+++ b/blogpost.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Bienvenido a Hyperblog</title>
+	<title>Bienvenido a Hyperblog version 1.0</title>
 	<link rel="stylesheet" href="css/estilos.css">
 </head>
 <body>
