--- a/blogpost.html
+++ b/blogpost.html
@@ -7,10 +7,15 @@
 	<link rel="stylesheet" href="css/estilos.css">
 </head>
 <body>
-	<h1>Este es el parrafo de inicio </h1>
-	<p>este es el primer parafo </p>
-	<p> Espero que la pagina web de chau, quede bien. Me tardaré pero 
-	son conceptos que debo aprender </p>
-	<p>No te merezco</p>
+	<div id="container">
+		<div id="post">
+			<h1>Este es el titulo atractivo e interesante del post</h1>	
+			<p>Y este es el parrafo de inicio donde vamos a explicar las cosas increibles que 
+				se pueden hacer con ramas</p>	
+		</div>
+		
+		
+	</div>
+	
 </body>
 </html>
