--- a/blogpost.html
+++ b/blogpost.html
@@ -9,7 +9,7 @@
 <body>
 	<div id="container">
 		<div id="cabecera">
-		Hyperblog
+		cabecera
 		<span id="tagline">Tu blog de cabecera</span>
 		</div>
 		<div id="post">
