--- a/blogpost.html
+++ b/blogpost.html
@@ -9,8 +9,8 @@
 <body>
 	<div id="container">
 		<div id="cabecera">
-		Hyperblog
-		<span id="tagline">Tu blog de cabecera</span>
+		Hyperblog maestro
+		<span id="tagline">Tu blog de maestro</span>
 		</div>
 		<div id="post">
 			<h1>Este es el titulo atractivo e interesante del post</h1>	
@@ -19,6 +19,7 @@
 				<p>Los blogs son la mejor forma de compartir informacion 
 					y tus ideas. Muchoo mas que ir a conferencias o 
 				salir en youtube. Excepto si eres rockstar. </p>
+				<p>suscribete y dale like</p>
 		</div>
 		
 		
