--- a/blogpost.html
+++ b/blogpost.html
@@ -14,11 +14,11 @@
 		<span id="tagline">Tu blog de cabecera</span>
 		</div>
 		<div id="post">
-			<h1>Este es el título atractivo e interesante del post</h1>	
-			<p>Y este es el parrafo de inicio donde vamos a explicar las cosas increibles que 
+			<h1>Este es el t&iacute;tulo atractivo e interesante del post</h1>	
+			<p>Y este es el p&aacute;rrafo de inicio donde vamos a explicar las cosas incre&iacute;bles que 
 				se pueden hacer con ramas</p>	
-				<p>Los blogs son la mejor forma de compartir informacion 
-					y tus ideas. Muchoo mas que ir a conferencias o 
+				<p>Los blogs son la mejor forma de compartir informaci&oacute;n 
+					y tus ideas. Muchoo m&aacute;s que ir a conferencias o 
 				salir en youtube. Excepto si eres rockstar. </p>
 				<p>suscribete y dale like</p>
 		</div>
